--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "crypto_tracker_beta",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "A modular, extensible **desktop app** built with **Electron** + **Node.js** that allows users to track cryptocurrency prices from the [CoinGecko API](https://www.coingecko.com/en/api). The app provides real-time alerts via **desktop notifications** and fully configurable **email alerts**, using a customizable watchlist and supporting **multiple base currencies**.",
+  "main": "main-process/app.js",
   "scripts": {
-    "test": "electron app.js",
-    "postinstall": "sudo chown root:root node_modules/electron/dist/chrome-sandbox && sudo chmod 4755 node_modules/electron/dist/chrome-sandbox"
+    "start": "electron .",
+    "test": "electron main-process/app.js",
+    "debug": "electron main-process/app.js --inspect"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://https://github.com/dd90z/Crypto_tracker_beta.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://https://github.com/dd90z/Crypto_tracker_beta/issues"
+  },
+  "homepage": "https://https://github.com/dd90z/Crypto_tracker_beta#readme",
   "dependencies": {
     "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
     "electron": "^37.1.0",
     "electron-store": "^10.1.0",
-    "node-mailer": "^0.1.1"
+    "nodemailer": "^7.0.4"
   }
 }
